--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             width: var(--size) !important;
             height: var(--size) !important;
             image-rendering: pixelated;
+            transform: rotate(90deg);
         }
 
         /* Alignement des motifs QR pour la continuité visuelle */
